SBVTestSuite/TestSuite/CompileTests/SCase/SCase37.stderr
SCase37.hs:12:14: error: [GHC-39584]
    " SCase37.hs:16:16-28: sCase: Unsupported complex pattern match.
        Saw: 0

      Only variables, wildcards, and nested constructors are supported.

    " In the quasi-quotation:
        [sCase|Expr e of
               Zero          -> 0
               Num k         -> k
               Var s         -> ite (s .== literal "a") 1 2
               Add (Num 0) j -> t j
               Add a b       -> t a + t b
               Let _   _a  b -> t b
      |]
   |
12 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

